--- a/.github/workflows/api-check.yml
+++ b/.github/workflows/api-check.yml
@@ -2,7 +2,7 @@ name: API Health Check
 
 on:
   schedule:
-    - cron: '*/5 * * * *'   # runs every 10 minutes
+    - cron: '*/1 9 * * *'   # runs every 10 minutes
   workflow_dispatch:         # lets you run it manually
 
 jobs:
